css/main.css
/* ... */
@media (max-width: 767px) {
  .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
    color: darkslategray !important;
  }
}

.navbar-inverse {
  background: #20364c;
}

.navbar-brand {
  font-size: 2.15rem !important;
  font-weight: 500;
  color: white !important;
}

/* Navbar link size */
.navbar-default .navbar-nav>li>a {
  font-size: 1.5rem !important;
}

.navbar-inverse .navbar-nav>li>a {
  color: white;
}

.navbar {
  border-radius: 0;
}

.active {
  /* background: white; */
  border-radius: 2px;
}

.navbar .dropdown-menu {
  margin-right: -1px;
}

/* Utility classes for positioning content ----------------------------------- */
.padding-left-1 {
  padding-left: 1rem !important;
}

.padding-left-2 {
  padding-left: 2rem !important;
}

.push-down-1 {
  margin-top: 1rem !important;
}

.push-down-2 {
  margin-top: 2rem !important;
}

.push-down-3 {
  margin-top: 3rem !important;
}

.push-down-4 {
  margin-top: 4rem !important;
}

.pull-up-1 {
  margin-top: -1rem !important;
}

.pull-up-2 {
  margin-top: -1rem !important;
}

.pull-up-3 {
  margin-top: -1rem !important;
}

.spacer-div-3 {
  height: 45px !important;
}

#link-to-docs,
#link-to-teaching-philosophy {
  color: #1585cf;
}

#link-to-docs:hover,
#link-to-docs:active,
#link-to-docs:visited,
#link-to-docs:focus {
  border: 1px solid #1585cf !important;
  padding-bottom: 6px !important;
  background: transparent !important;
}

/* Setting Lines after headers */
h3 {
  position: relative;
}

h3 span {
  background-color: white;
  padding-right: 10px;
}

h3:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 0.5em;
  border-top: 2px solid slategray;
  z-index: -1;
}

/* Format the footer ---------------------------------------------------------- */
footer {
  padding-bottom: 2rem;
}

/* Format the social-professional network icons ------------------------------ */
.social-icons {
  list-style-type: none;
}

.social-icons li {
  padding-left: 2rem;
  display: inline-block;
}

.social-icons li a {
  color: #1585cf;
}

.social-icons li a:hover {
  opacity: .8;
  text-decoration: none !important;
}

/* Projects page --------------------------------------------------------- */
#projects .panel {
  margin-left: 2rem;
}

#projects .panel-default {
  border-radius: 3px;
}

#projects .panel-default {
  border-radius: 3px;
}

#projects .panel-heading {
  border-bottom: none;
}

#projects .panel-heading,
#projects .panel-footer {
  text-align: center;
  background: #F6F7FB;
  padding: 2rem;
}

#projects .panel-footer {
  border-top: none;
}

#projects .panel-heading h5 {
  color: black;
  font-style: normal;
  font-weight: 500;
  font-size: 1.75rem;
}

.panel-default .panel-heading a:hover {
  padding-bottom: 0px !important;
}

/* All Links panels ---------------------------------------------- */
#links .panel-default {
  border-radius: 0;
  padding: 0;
  border: none;
  box-shadow: none;
}

#links .panel-heading {
  border-bottom: none;
}

#links img {
  margin-right: 3rem;
  margin-bottom: 2rem;
  width: 100px;
  padding: 3px;
  border: 1px solid silver;
}

/* Lists ------------------------------------------------------------- */
/* Add bottom margin to the description lists */
dd {
  margin-bottom: 1rem;
}

/* Set the anchor element to display block */
.list-group li a {
  display: block;
}

/* Responsive: Portrait tablets and up */
@media only screen and (min-width: 768px) {
  .container {
    max-width: 1140px;
  }
}

/* Accordion panels ----------------------------------------------------- */
/* plus glyph for showing collapsible panels */
.panel-heading .accordion-plus-toggle:before {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f068";
  float: right;
  color: silver;
}

.panel-heading .accordion-plus-toggle.collapsed:before {
  content: "\f067";
  color: silver;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
}

/* arrow glyph for showing collapsible panels */
.panel-heading .accordion-arrow-toggle:before {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f078";
  float: right;
  color: silver;
}

.panel-heading .accordion-arrow-toggle.collapsed:before {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f054";
  color: silver;
}

/* sets the link to the width of the entire panel title */
.panel-title>a {
  display: block;
}

/* Back to top button */

/* Back to top button ----------------------------------------------------- */
#topper {
  display: none;
  position: fixed;
  bottom: 300px;
  right: 0px;
  z-index: 99;
  border: none;
  outline: none;
  background-color: #1585cf;
  color: white;
  padding: 12px 6px 12px 6px;
  border-radius: 4px 0 0 4px;
  cursor: pointer;
  font-size: 1.6rem;
}

#topper:hover {
  background-color: #1585cf;
  opacity: .8;
}


/* Sidebar social icons */
#sidebar-social {
  margin-top: 8px;
  margin-bottom: 4px;
}

#sidebar-social a {
  color: #555;
  margin: 0 5px;
  transition: color 0.2s;
}

#sidebar-social a:hover {
  color: #039BE5;
}

/* News Timeline */
#news {
  list-style: none;
  padding-left: 32px;
  margin-top: 8px;
  position: relative;
}

#news::before {
  content: '';
  position: absolute;
  left: 7px;
  top: 6px;
  bottom: 6px;
  width: 2px;
  background: #ddd;
}

#news li {
  position: relative;
  margin-bottom: 18px;
  line-height: 1.5;
}

#news li::before {
  content: '';
  position: absolute;
  left: -25px;
  top: 5px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background: #039BE5;
  border: 2px solid #fff;
  box-shadow: 0 0 0 2px #039BE5;
}

#news li b {
  display: block;
  font-size: 0.78em;
  color: #039BE5;
  text-transform: uppercase;
  letter-spacing: 0.6px;
  margin-bottom: 2px;
}

/* Publication filter buttons */
#pub-filters .toggle-button {
  margin-right: 6px;
  margin-bottom: 6px;
  opacity: 0.55;
}

#pub-filters .toggle-button.active-filter {
  opacity: 1;
  box-shadow: 0 0 0 2px #0277a8;
}
/* ... */

